--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+ 
  <div class="container">
       <h1>Weather App</h1>
       <div class="searchContainer">
@@ -18,3 +28,6 @@
       <p id="errorMessage"></p>
     </div>
     <script src="script.js"></script>
+
+</body>
+</html>
