Added Search Autocomplete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
           id="cityField"
           placeholder="Enter city name..."
           type="text"
+          list="citySuggestions"
         />
+        <datalist id="citySuggestions"></datalist>
         <button id="searchBtn">Search</button>
       </div>
       <div id="weatherContainer">
